taskcar-motor-driver/build/log/idf_py_stderr_output_39918
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c: In function 'app_main':
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/main.c:24:5: error: implicit declaration of function 'gpio_set_level' [-Werror=implicit-function-declaration]
   24 |     gpio_set_level(25, 0);
      |     ^~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5663: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2486: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
